--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "node-sass": "4.12.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-epic-spinners": "^0.5.0",
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-toastify": "^6.2.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
