--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.2.6",
     "node-sass": "4.12.0",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-epic-spinners": "^0.5.0",
     "react-icons": "^4.1.0",
