--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-epic-spinners": "^0.5.0",
+    "react-flip-move": "^3.0.4",
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
